# reax_tools

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  README_CN.md  README_en.md  README_new.md  README_zh.md  VERSION  build_dev.sh  build_local.sh  build_wasm.sh  compare_HN3O4_atom_transfer.csv  docker-compose.yml  findings.md  install_reax_tools.sh  make_release.sh  nginx.conf  package-lock.json  package.json  progress.md  reax_network.py  reax_plot.py  reax_tools  replace.sh  start-dev.sh  task_plan.md  xyz.dot  xyz.lammpstrj
cpp/: argparser.cpp  argparser.h  cell_list.cpp  cell_list.h  defines.cpp  defines.h  load_files.cpp  local_main.cc  main.cpp  molecule.cpp  molecule.h  rdkit_utils.cc  rdkit_utils.cpp  rdkit_utils.h  reax_counter.cpp  reax_counter.h  reax_flow.cpp  reax_flow.h  reax_species.cpp  reax_species.h  reax_track.cpp  reax_track.h  string_tools.cpp  string_tools.h  system.cpp  system.h  system.old.cc  universe.cpp  universe.h  universe_parallel.cc  universe_serial.cc  vec_algorithms.h  wasm_main.cc
doc/: README_Reaction_Network_Improvements.md  Reaction_Network_Algorithm_Improvements.md  Reaction_Network_Implementation_Guide.md  Reaction_Network_Quick_Reference.md  changelog.md  devplan.md  perf_test.csv  perf_test.txt  tutorial_1_energetic_materials.md
examples/: FeCHON_5frames.csv  FeCHON_5frames.dot  FeCHON_5frames.lammpstrj  autotest.sh  big.csv  big.dot  cp2k.csv  cp2k.xyz  drill.csv  drill.dot  drill.xyz  drill_1.data  drill_2.data  drill_3.data  drill_4.data  drill_5.data  drill_final.data  ethanol.csv  ethanol.xyz  plot.sh  ploymer.dot  polymer.csv  polymer.dot  rdx_example.data  small.csv  small.dot  small.lammpstrj  small_1.data  small_2.data  small_3.data  small_4.data  small_5.data  small_6.data  small_7.data  small_8.data  small_9.data
include/: atom.h  defines.h  draw_molecule.h  getopt.h  kdtree.h  menu.archived  molecule.h  reax_flow.h  reax_species.h  string_tools.h  system.h  universe.h  vec_algorithms.h
lib/: libRDKitAlignment.so.1  libRDKitCIPLabeler.so.1  libRDKitCatalogs.so.1  libRDKitCatalogs.so.1.2025.09.1pre  libRDKitChemReactions.so.1  libRDKitChemTransforms.so.1  libRDKitDataStructs.so.1  libRDKitDepictor.so.1  libRDKitDescriptors.so.1.2025.09.1pre  libRDKitDistGeomHelpers.so.1  libRDKitDistGeometry.so.1  libRDKitEigenSolvers.so.1  libRDKitFileParsers.so.1  libRDKitForceField.so.1.2025.09.1pre  libRDKitForceFieldHelpers.so.1  libRDKitFragCatalog.so.1  libRDKitGeneralizedSubstruct.so.1  libRDKitGenericGroups.so.1  libRDKitGraphMol.so.1  libRDKitInfoTheory.so.1.2025.09.1pre  libRDKitMMPA.so.1.2025.09.1pre  libRDKitMarvinParser.so.1.2025.09.1pre  libRDKitMolDraw2D.so.1  libRDKitMolInteractionFields.so.1.2025.09.1pre  libRDKitMolTransforms.so.1  libRDKitPubChemShape.so.1  libRDKitRDGeneral.so.1  libRDKitReducedGraphs.so.1  libRDKitRingDecomposerLib.so.1  libRDKitScaffoldNetwork.so.1  libRDKitSmilesParse.so.1.2025.09.1pre  libRDKitSubgraphs.so.1  libRDKitSubstructMatch.so.1.2025.09.1pre  libRDKitmaeparser.so.1  libRDKitmaeparser.so.1.2025.09.1pre  libboost_contract.so.1.88.0  libboost_date_time.so.1.88.0  libboost_fiber.so.1.88.0  libboost_iostreams.so.1.88.0  libboost_stacktrace_basic.so.1.88.0  (+4 more)
plot/: autoplot.py  reax_plot.py
python/: reax_plot.py
reax_reporter/: llm_file_descriptions.md  llm_task.md  reax_reporter.py  report.html  template.html
server/: .env  .env.example  Dockerfile  README.md  package-lock.json  package.json
src/: atom.cpp  cell_list.cpp  defines.cpp  (+14 more)
(+233 files in other folders)
